
Updated Copyright year to 2020.

*****

Implemented bm.prompt_search() function for interactive prompt
searches in the Bibmanager database by keywords, including
auto-complete, auto-suggest, and bottom toolbar helps.
Documented and tested.
(Pulled code from cli_fetch() to generalize it).
Documented and tested.

*****

Some minor PEP8 cosmetics.

*****

Fixed hard-coded variable in u.KeyWordCompleter() class.
Removed u.fetch_keywords constant (no longer used).

*****

Modified pm.open() function, added pdf argument.
Added check that PDF file exists (raising ValueError if not).
Added check that at least one argument must be not None (ValueError).
Updated docstrings and tests.

*****

Implemented cli_open() function for open CLI.
Some tweaks in cli_fetch() function (no behavior change).
Documented and tested.


*****  Mon Jan  6 11:01:02 CET 2020  *****

Fixed bug in test_latex_manager.py, needed a teardown to return to
current folder after a change of directory that was deleted in test.

*****

Implemented pm.set_pdf() function, a more general function than
pm.add_ads_request().
Removed pm.add_ads_request() function.
Tested and documented.

*****

Renamed name argument to filename in pm.set_pdf() function
to be consistent with other functions.
Added Exceptions for invalid filenames to pm.set_pdf().
(Pulled from pm.fetch()).
Updated docs and tests.

*****

Modified u.KeyWordCompleter() class for broader compatibility.
There are no secondary effects.

*****

Implemented cli_link() function to enable pdf CLI.
This CLI allows for manual setting/linking of PDF files to entries.
Tweaked cli_fetch(), minor screen output changes.
Documented and tested.

*****

Fixed tests screen-output mismatch.


*****  Tue Jan  7 21:40:38 CET 2020  *****

Fixed bug with search autocompleter and autosuggester, enforced
options to be a list of string elements.

*****

Tweaked u.KeyWordCompleter() and u.AutoSuggestKeyCompleter() to sort
and unique the options.
